refactor: extract helpers from validate